samples/_failures_safe/1761200338_40d2ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8f974a1.c: In function ‘main’:
./samples/SAFE/__tmp_a8f974a1.c:178:65: error: expected ‘)’ at end of input
  178 |     if (!compress_run_length(input.data, input.size, &compressed
      |                             ~                                   ^
      |                                                                 )
./samples/SAFE/__tmp_a8f974a1.c:178:5: error: expected declaration or statement at end of input
  178 |     if (!compress_run_length(input.data, input.size, &compressed
      |     ^~
